# turnstone

./: .gitignore  CHANGELOG.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/helm/turnstone/: Chart.yaml
docs/: api-reference.md  architecture.md  bulk-endpoints.md  console.md  coordinator-api-tour.md  coordinator-skills.md  security.md
docs/diagrams/: 01-system-context.puml  11-console-data-flow.puml  15-auth-architecture.puml  16-channel-architecture.puml  27-coordinator-wait-for-workstream.puml
scripts/: css_specificity_audit.py
sdk/typescript/: openapi-console.json  openapi-server.json  package-lock.json  package.json
sdk/typescript/src/: server.ts  types.ts
sdk/typescript/tests/: server.test.ts
tests/: _coord_test_helpers.py  _replay_helpers.py  conftest.py  test_api_versioning.py  test_app_js.py  test_attachment_evaluate_endpoint.py  test_audit.py  test_auth.py  test_auth_identity.py  test_cancel.py  test_close_reason_persistence.py  test_console.py  test_console_metrics.py  test_console_routing_proxy.py  test_coord_rich_ws_state_payload.py  test_coord_ui_approve_tools.py  test_coordinator_adapter.py  test_coordinator_client.py  test_coordinator_close_all_children.py  test_coordinator_end_to_end.py  test_coordinator_endpoints.py  test_coordinator_governance.py  test_coordinator_page.py  test_coordinator_tools.py  test_interactive_adapter.py  test_judge_storage.py  test_load_skill.py  test_media_backends.py  test_model_registry.py  test_models_endpoint.py  test_multimodal_attachments.py  test_node_info.py  test_openapi.py  test_phase6_endpoints.py  test_prompt_templates_runtime.py  test_prompts.py  test_providers.py  test_ratelimit.py  test_renderer_js.py  test_route_proxy_audit.py  (+24 more)
turnstone/: __init__.py  cli.py  server.py
turnstone/api/: console_schemas.py  console_spec.py  server_schemas.py  server_spec.py
turnstone/channels/: _sse.py
turnstone/channels/discord/: bot.py
turnstone/channels/slack/: bot.py
turnstone/console/: collector.py  coordinator_adapter.py  coordinator_client.py  coordinator_ui.py  metrics.py  server.py  session_factory.py
turnstone/console/static/: admin.js  app.js  governance.js  index.html  style.css
turnstone/console/static/coordinator/: coordinator.css  coordinator.js  index.html
turnstone/core/: attachments.py  audio_routing.py  auth.py  media_backends.py  media_evaluator.py  memory.py  model_registry.py  node_info.py  output_guard.py  policy.py  session.py  session_manager.py  session_replay.py  session_routes.py  session_ui_base.py  session_worker.py  settings_registry.py  state_writer.py  tool_advisory.py  tools.py  web_helpers.py  workstream.py
turnstone/core/adapters/: __init__.py  _ui_cleanup.py  interactive_adapter.py
turnstone/core/providers/: _openai_common.py
turnstone/core/storage/: _postgresql.py  _protocol.py  _sqlite.py  _utils.py
turnstone/core/storage/migrations/versions/: 042_coord_trust_send_perm.py  047_drop_coord_spawn_quota_settings.py
turnstone/prompts/: __init__.py  base_coordinator.md  tools_coordinator.md
turnstone/sdk/: console.py  events.py  server.py
turnstone/shared_static/: auth.js  base.css  cards.css  cards.js  chat.css  composer.js  composer_attachments.js  composer_queue.js  renderer.js  status_bar.js  ui-base.css  utils.js
turnstone/tools/: cancel_workstream.json  close_all_children.json  inspect_workstream.json  list_nodes.json  list_skills.json  list_workstreams.json  memory.json  send_to_workstream.json  spawn_batch.json  spawn_workstream.json  tasks.json  wait_for_workstream.json
turnstone/ui/static/: app.js  index.html  style.css
